--- a/application.properties
+++ b/application.properties
@@ -5,3 +5,4 @@ config.security.oauth.client.id2=extranetapp
 config.security.oauth.client.secret2=extranet#123456
 config.security.oauth.client.id3=movilapp
 config.security.oauth.client.secret3=movil#123456
+config.security.oauth.jwt.key2=medlogperuwalle12011984
