--- a/servicio-usuario.properties
+++ b/servicio-usuario.properties
@@ -1,5 +1,5 @@
 configuracion.texto=Configurando entorno por defecto desarrollo
-spring.datasource.url=jdbc:sqlserver://192.168.3.57:1433;databaseName=DSISTAM
+spring.datasource.url=jdbc:sqlserver://192.168.3.57:1433;databaseName=DSISTAM;trustServerCertificate=true
 spring.datasource.username=extranet
 spring.datasource.password=extr$2012
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
