actualizando en rabbitmq

--- a/application.properties
+++ b/application.properties
@@ -7,4 +7,4 @@ config.security.oauth.client.id3=movilapp
 config.security.oauth.client.secret3=movil#123456
 config.security.oauth.jwt.key2=medlogperuwalle12011984
 spring.zipkin.base-url=http://zipkin-server:9411/
-spring.rabbitmq.host=rabbitmq3126
+spring.rabbitmq.host=rabbitmq
