agregando servicio para msc

--- a/application.properties
+++ b/application.properties
@@ -6,5 +6,7 @@ config.security.oauth.client.secret2=extranet#123456
 config.security.oauth.client.id3=movilapp
 config.security.oauth.client.secret3=movil#123456
 config.security.oauth.jwt.key2=medlogperuwalle12011984
+config.security.oauth.client.id4=mscapp
+config.security.oauth.client.secret4=mscspring#050224
 #spring.zipkin.base-url=http://zipkin-server:9411/
 #spring.rabbitmq.host=rabbitmq
